<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fileSelectionContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.kreativesquadz.calculatorlock.utils.CenterTitleToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/background"
            android:minHeight="?attr/actionBarSize"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

        <LinearLayout
            android:id="@+id/banner_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/toolbar"
            android:orientation="vertical" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/banner_container"
            android:orientation="horizontal"
            android:weightSum="60">

            <Button
                android:id="@+id/New"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="30"
                android:text="@string/New"
                android:visibility="gone" />

            <Button
                android:id="@+id/storage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="30"
                android:text="@string/ext"
                android:visibility="gone" />
        </LinearLayout>

        <TextView
            android:id="@+id/folderpath"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/banner_container"
            android:gravity="center_horizontal"
            android:text=""
            android:textSize="15dp"
            android:visibility="gone" />

        <ListView
            android:id="@+id/directorySelectionList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/banner_container"
            android:layout_weight="1"
            android:choiceMode="multipleChoice" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="gone"
            android:weightSum="90">

            <Button
                android:id="@+id/cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:text="@string/all" />

            <Button
                android:id="@+id/ok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="30"
                android:text="@string/ok" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_hide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/layoutViewAdd"
            android:layout_margin="@dimen/_30sdp"
            android:background="@drawable/btn_back"
            android:text="Hide"
            android:textColor="@color/btn_back"
            android:visibility="gone" />



<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:orientation="horizontal"
    android:id="@+id/layoutViewAdd">

</LinearLayout>

    </RelativeLayout>
</LinearLayout>
